--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -76,13 +76,13 @@
     "back_to_products": "Retour aux Produits",
     "tomatoes_description": "Nos tomates premium sont cultivées dans les sols fertiles d'Agadir, Maroc. Récoltées à maturité optimale, elles offrent une saveur exceptionnelle, une couleur vibrante et une texture ferme. Parfaites pour la consommation fraîche, les salades ou la transformation.",
     "tomatoes_features": [
-      "Cultivées sous climat méditerranéen optimal",
+      "Cultivées sous le microclimat unique d'Agadir",
       "Cueillies à la main à maturité optimale",
       "Riches en vitamines et antioxydants",
       "Disponibles toute l'année",
       "Normes de qualité certifiées"
     ],
-    "oranges_description": "Oranges douces et juteuses des vergers ensoleillés du Maroc. Nos oranges sont connues pour leur équilibre parfait entre douceur et acidité, idéales pour le jus frais ou la consommation directe. Riches en vitamine C et en bonté naturelle.",
+    "oranges_description": "Oranges douces et juteuses des vergers ensoleillés d'Agadir, bénéficiant de 300+ jours de soleil. Nos oranges sont connues pour leur équilibre parfait entre douceur et acidité.",
     "oranges_features": [
       "100% naturelles, sans traitements artificiels",
       "Haute teneur en jus",
@@ -90,7 +90,7 @@
       "Qualité premium d'exportation",
       "Pratiques agricoles durables"
     ],
-    "peppers_description": "Poivrons croquants et colorés cultivés avec soin dans nos fermes marocaines. Disponibles en plusieurs variétés, nos poivrons sont connus pour leur fraîcheur, leur croquant et leurs couleurs vibrantes. Idéaux pour la cuisine, les grillades ou les salades fraîches.",
+    "peppers_description": "Poivrons croquants et colorés cultivés dans nos fermes côtières d'Agadir avec une moyenne stable de 21°C. Reconnus pour leur fraîcheur et leurs couleurs vibrantes.",
     "peppers_features": [
       "Plusieurs variétés de couleurs disponibles",
       "Texture croquante et saveur fraîche",
@@ -98,7 +98,7 @@
       "Soigneusement triés et emballés",
       "Durée de conservation prolongée"
     ],
-    "watermelons_description": "Pastèques juteuses et sucrées cultivées sous le soleil marocain. Nos pastèques sont soigneusement sélectionnées pour leur douceur, leur texture croquante et leur chair rouge vibrante. Parfaites pour les chaudes journées d'été et une collation saine et rafraîchissante.",
+    "watermelons_description": "Pastèques juteuses et sucrées cultivées sous le soleil exceptionnel d'Agadir. Nos pastèques sont sélectionnées pour leur douceur et leur chair rouge vibrante.",
     "watermelons_features": [
       "Naturellement douces et rafraîchissantes",
       "Haute teneur en eau pour l'hydratation",
@@ -135,7 +135,7 @@
       "packaging": "Bins (Palox) ou Vrac",
       "calibration": "8kg - 16kg par fruit"
     },
-    "calabacin_description": "Nos courgettes sont cultivées dans des environnements contrôlés pour assurer une forme parfaitement droite et une peau verte vibrante.",
+    "calabacin_description": "Nos courgettes sont cultivées dans le microclima côtier d'Agadir pour assurer une forme parfaitement droite et une peau verte vibrante.",
     "calabacin_features": [
       "Couleur vert foncé intense",
       "Texture ferme et croquante",
@@ -163,7 +163,7 @@
       "packaging": "Caisse Carton 10kg",
       "calibration": "Calibres 5, 6, 7"
     },
-    "melon_description": "Cultivés sous le soleil marocain, nos melons jaunes offrent une saveur rafraîchissante et une texture douce.",
+    "melon_description": "Cultivés sous le soleil d'Agadir, nos melons jaunes offrent une saveur rafraîchissante et une texture douce.",
     "melon_features": [
       "Peau jaune lisse",
       "Chair blanche croquante",
@@ -204,7 +204,17 @@
       "calendar": "Octobre à Juin",
       "packaging": "Carton 5kg, Flowpack 500g",
       "calibration": "6-9mm (Fine), <6mm (Extra Fine)"
-    }
+    },
+    "climate_advantage_title": "Pourquoi le climat d'Agadir sublime ce produit",
+    "trust_title": "Expertise Export Fiable",
+    "trust_description": "Avec plus de 35 ans d'expérience, HOUKMI EXPORT garantit un calendrier de récolte fiable, une logistique ponctuelle et une capacité d'approvisionnement constante pour tous nos partenaires internationaux.",
+    "tomatoes_climate": "La température moyenne stable de 21°C évite les chocs thermiques, garantissant que nos tomates développent une couleur uniforme et une fermeté optimale pour le transport longue distance.",
+    "oranges_climate": "L'humidité océanique équilibrée et l'ensoleillement intense permettent d'obtenir des oranges avec une teneur en jus exceptionnelle et un ratio sucre/acidité parfait.",
+    "peppers_climate": "Les cycles de récolte prévisibles nous permettent de fournir des poivrons croquants à parois épaisses de taille constante, répondant aux exigences strictes des supermarchés européens.",
+    "zucchini_climate": "Le climat côtier tempéré permet une récolte quotidienne de courgettes tendres qui conservent leur croquant et leur éclat vert intense tout au long de la chaîne d'exportation.",
+    "watermelon_climate": "Plus de 300 jours de soleil garantissent les taux de Brix (sucre) les plus élevés possibles et une chair croquante d'un rouge profond que les clients adorent.",
+    "melon_climate": "L'intensité lumineuse unique d'Agadir crée des melons incroyablement parfumés avec une peau résistante, parfaits pour une arrivée à destination dans un état impeccable.",
+    "green_beans_climate": "Les températures régulées par l'océan garantissent que nos haricots poussent droits et tendres sans devenir fibreux, offrant une qualité gastronomique à chaque fois."
   },
   "Reviews": {
     "title": "Avis Clients",
@@ -219,5 +229,22 @@
     "success": "Merci ! Votre avis est en attente d'approbation.",
     "photo": "Télécharger une photo (Optionnel)",
     "pending": "Avis en attente d'approbation"
+  },
+  "Agadir": {
+    "title": "Agadir : Un Microclimat Agricole Unique pour un Approvisionnement Export Fiable",
+    "description": "Situé sur la côte atlantique du sud du Maroc, Agadir offre un avantage stratégique agricole inégalé dans la région. La combinaison de la régulation océanique et d'un ensoleillement constant en fait un pôle d'excellence pour l'exportation de produits premium.",
+    "climate_title": "Stabilité Climatique et Moyenne Annuelle de 21°C",
+    "climate_desc": "Agadir bénéficie de plus de 300 jours d'ensoleillement par an, avec une température moyenne annuelle de 21°C, offrant un environnement parfait pour une production tout au long de l'année.",
+    "ocean_title": "Influence Océanique et Régulation Thermique",
+    "ocean_desc": "L'océan Atlantique agit comme un thermorégulateur naturel, évitant les variations saisonnières extrêmes et garantissant un environnement stable pour les cultures délicates.",
+    "harvest_title": "Cycles de Récolte Prévisibles",
+    "harvest_desc": "Un climat constant signifie une croissance régulière. Nous proposons des calendriers d'approvisionnement fiables et une qualité de récolte uniforme sur laquelle les importateurs européens et russes peuvent compter.",
+    "strategic_title": "Emplacement Stratégique pour les Marchés Mondiaux",
+    "strategic_desc": "Notre proximité avec les principaux ports et une infrastructure logistique avancée font de nous le partenaire idéal pour les marchés européens et russes.",
+    "stats": {
+      "sun": "300+ Jours",
+      "temp": "21°C Moyenne",
+      "advantage": "Avantage Atlantique"
+    }
   }
 }
