--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -51,43 +51,72 @@
     "contact_us": "Свяжитесь С Нами",
     "rights": "Все права защищены."
   },
+  "Agadir": {
+    "title": "Агадир: Уникальный сельскохозяйственный микроклимат для надежных экспортных поставок",
+    "description": "Расположенный на атлантическом побережье Марокко, Агадир предлагает стратегическое сельскохозяйственное преимущество благодаря более чем 300 солнечным дням в году и стабильной средней температуре 21°C.",
+    "climate_title": "Климатическая стабильность и среднегодовая температура 21°C",
+    "climate_desc": "В Агадире более 300 солнечных дней в году, что обеспечивает идеальные условия для стабильного роста без термических шоков.",
+    "ocean_title": "Терморегулирующее влияние Атлантики",
+    "ocean_desc": "Морской бриз действует как естественный термостат, предотвращая резкие перепады температур.",
+    "harvest_title": "Предсказуемые циклы сбора урожая",
+    "harvest_desc": "Стабильные условия позволяют нам придерживаться фиксированных графиков сбора урожая, обеспечивая постоянные поставки для международных партнеров.",
+    "strategic_title": "Стратегическое расположение для экспорта",
+    "strategic_desc": "Отличные логистические связи с Европой и Россией, гарантирующие свежесть от фермы до пункта назначения.",
+    "stats": {
+      "sun": "300+ солнечных дней",
+      "temp": "Средняя 21°C",
+      "advantage": "Атлантический бонус"
+    }
+  },
   "ProductDetails": {
-    "about": "О Продукте",
-    "features": "Основные Характеристики",
-    "contact_us": "Свяжитесь с Нами для Заказов",
-    "back_to_products": "Вернуться к Продуктам",
-    "tomatoes_description": "Наши премиум-помидоры выращиваются на плодородных почвах Агадира, Марокко. Собранные в оптимальной спелости, они обладают исключительным вкусом, ярким цветом и плотной текстурой. Идеальны для свежего употребления, салатов или переработки.",
+    "about": "О продукте",
+    "features": "Основные характеристики",
+    "contact_us": "Свяжитесь с нами для заказа",
+    "back_to_products": "Вернуться к продуктам",
+    "specs_title": "Технические характеристики",
+    "varieties_label": "Сорта",
+    "calendar_label": "Календарь сбора",
+    "packaging_label": "Упаковка",
+    "calibration_label": "Калибровка",
+    "climate_advantage_title": "Почему климат Агадира улучшает этот продукт",
+    "trust_title": "Надежный экспортный опыт",
+    "trust_description": "Обладая более чем 35-летним опытом, HOUKMI EXPORT гарантирует надежный график сбора урожая, своевременную логистику и стабильные объемы поставок.",
+    "tomatoes_description": "Наши томаты премиум-класса выращиваются в Агадире, Марокко. Собранные при оптимальной спелости, они обладают исключительным вкусом и плотной текстурой.",
     "tomatoes_features": [
-      "Выращены в оптимальном средиземноморском климате",
-      "Собраны вручную в оптимальной спелости",
-      "Богаты витаминами и антиоксидантами",
-      "Доступны круглый год",
+      "Выращено в уникальном атлантическом микроклимате Агадира",
+      "Собрано вручную при оптимальной спелости",
+      "Богато витаминами и антиоксидантами",
+      "Доступно круглый год",
       "Сертифицированные стандарты качества"
     ],
-    "oranges_description": "Сладкие, сочные апельсины из солнечных рощ Марокко. Наши апельсины известны своим идеальным балансом сладости и кислотности, идеальны для свежего сока или прямого употребления. Насыщены витамином C и натуральной пользой.",
+    "tomatoes_climate": "Стабильная средняя температура 21°C предотвращает термический шок, обеспечивая однородную текстуру и цвет круглый год.",
+    "oranges_description": "Сладкие, сочные апельсины из солнечных рощ Агадира, получающие более 300 солнечных дней в году.",
     "oranges_features": [
-      "100% натуральные, без искусственных обработок",
+      "100% натуральные, без искусственной обработки",
       "Высокое содержание сока",
       "Идеальный баланс сладости",
-      "Премиум-качество экспорта",
-      "Устойчивые методы ведения сельского хозяйства"
+      "Премиальное экспортное качество",
+      "Устойчивые методы ведения хозяйства"
     ],
-    "peppers_description": "Хрустящие, яркие перцы, выращенные с заботой на наших марокканских фермах. Доступны в нескольких сортах, наши перцы известны своей свежестью, хрустом и яркими цветами. Идеальны для приготовления, гриля или свежих салатов.",
+    "oranges_climate": "Сбалансированная океаническая влажность и интенсивное солнечное излучение естественным образом повышают уровень сахара (Brix).",
+    "peppers_description": "Хрустящие, яркие перцы, выращенные с заботой на прибрежных фермах Агадира при стабильной температуре 21°C.",
     "peppers_features": [
-      "Несколько цветовых сортов",
+      "Доступно несколько цветовых сортов",
       "Хрустящая текстура и свежий вкус",
-      "Богаты витаминами A и C",
-      "Тщательно отсортированы и упакованы",
+      "Богат витаминами А и С",
+      "Тщательно отсортировано и упаковано",
       "Увеличенный срок хранения"
     ],
-    "watermelons_description": "Сочные, сладкие арбузы, выращенные под марокканским солнцем. Наши арбузы тщательно отбираются по сладости, хрустящей текстуре и яркой красной мякоти. Идеальны для жарких летних дней и здорового, освежающего угощения.",
-    "watermelons_features": [
-      "Естественно сладкие и освежающие",
-      "Высокое содержание воды для гидратации",
-      "Доступны бессемянные сорта",
-      "Тщательно собраны и транспортированы",
-      "Доступность в высокий сезон"
-    ]
+    "peppers_climate": "Стабильный климат предотвращает растрескивание кожицы и обеспечивает равномерную толщину стенок плода.",
+    "watermelons_description": "Сочные, сладкие арбузы, выращенные под исключительным солнцем Агадира.",
+    "watermelon_climate": "Непрерывное солнечное сияние обеспечивает превосходную плотность мякоти и естественную сладость.",
+    "zucchini_climate": "Атлантический климат способствует быстрому и равномерному росту, обеспечивая гладкую кожицу и плотную сердцевину.",
+    "melon_climate": "Прохладные океанические ночи концентрируют сахара в мякоти, гарантируя интенсивный вкус.",
+    "green_beans_climate": "Атлантический воздух с контролируемой влажностью предотвращает образование волокон, сохраняя фасоль нежной и хрустящей.",
+    "calabacin_description": "Наши кабачки выращиваются в прибрежном микроклимате Агадира для обеспечения идеальной формы и яркой зеленой кожицы.",
+    "melon_description": "Созревшие под солнцем Агадира, наши желтые дыни обладают освежающим сладким вкусом.",
+    "alubias_description": "Плоская зеленая фасоль премиум-класса (Alubias), отобранная вручную.",
+    "judias_description": "Круглая тонкая зеленая фасоль (Judías), тщательно отсортированная."
   },
   "Reviews": {
     "title": "Отзывы клиентов",
