--- a/public/locales/it.json
+++ b/public/locales/it.json
@@ -64,20 +64,46 @@
     "contact_us": "Contattaci",
     "rights": "Tutti i diritti riservati."
   },
+  "Agadir": {
+    "title": "Agadir: Un Microclima Agricolo Unico per una Fornitura Export Affidabile",
+    "description": "Situata sulla costa atlantica del Marocco, Agadir offre un vantaggio agricolo strategico con oltre 300 giorni di sole all'anno e una temperatura media stabile di 21°C.",
+    "climate_title": "Stabilità Climatica e Media Annua di 21°C",
+    "climate_desc": "Agadir gode di oltre 300 giorni di sole all'anno, fornendo condizioni ideali per una crescita costante senza shock termici.",
+    "ocean_title": "L'Influenza Termoregolatrice dell'Atlantico",
+    "ocean_desc": "La brezza marina funge da termostato naturale, prevenendo sbalzi di temperatura estremi.",
+    "harvest_title": "Cicli di Raccolto Prevedibili",
+    "harvest_desc": "Le condizioni stabili ci permettono di mantenere calendari di raccolta fissi, garantendo forniture costanti per i partner internazionali.",
+    "strategic_title": "Posizione Strategica per l'Esportazione",
+    "strategic_desc": "Eccellenti collegamenti logistici per l'Europa e la Russia, garantendo freschezza dalla fattoria alla destinazione.",
+    "stats": {
+      "sun": "300+ Giorni di Sole",
+      "temp": "21°C di Media",
+      "advantage": "Vantaggio Atlantico"
+    }
+  },
   "ProductDetails": {
     "about": "Informazioni",
     "features": "Caratteristiche Principali",
     "contact_us": "Contattaci per Ordini",
     "back_to_products": "Torna ai Prodotti",
-    "tomatoes_description": "I nostri pomodori premium sono coltivati nei terreni fertili di Agadir, Marocco. Raccolti al punto ottimale di maturazione, offrono sapore eccezionale, colore vibrante e consistenza soda. Perfetti per consumo fresco, insalate o lavorazione.",
+    "specs_title": "Specifiche Tecniche",
+    "varieties_label": "Varietà",
+    "calendar_label": "Calendario Raccolto",
+    "packaging_label": "Imballaggio",
+    "calibration_label": "Calibro / Dimensioni",
+    "climate_advantage_title": "Perché il clima di Agadir esalta questo prodotto",
+    "trust_title": "Esperienza Export Affidabile",
+    "trust_description": "Con oltre 35 anni di esperienza, HOUKMI EXPORT garantisce un calendario di raccolta affidabile, logistica tempestiva e una capacità di fornitura costante.",
+    "tomatoes_description": "I nostri pomodori premium sono coltivati ad Agadir, Marocco. Raccolti al punto ottimale di maturazione, offrono sapore eccezionale e consistenza soda.",
     "tomatoes_features": [
-      "Coltivati in clima mediterraneo ottimale",
+      "Coltivati nel microclima unico dell'Atlantico di Agadir",
       "Raccolti a mano al punto ottimale",
       "Ricchi di vitamine e antiossidanti",
       "Disponibili tutto l'anno",
       "Standard di qualità certificati"
     ],
-    "oranges_description": "Arance dolci e succose dai frutteti baciati dal sole del Marocco. Le nostre arance sono note per il loro perfetto equilibrio tra dolcezza e acidità, ideali per succo fresco o consumo diretto. Ricche di vitamina C e bontà naturale.",
+    "tomatoes_climate": "La temperatura media stabile di 21°C previene shock termici, garantendo consistenza e colore uniformi tutto l'anno.",
+    "oranges_description": "Arance dolci e succose provenienti dagli agrumeti baciati dal sole di Agadir, che beneficiano di oltre 300 giorni di sole.",
     "oranges_features": [
       "100% naturali, senza trattamenti artificiali",
       "Alto contenuto di succo",
@@ -85,7 +111,8 @@
       "Qualità premium da esportazione",
       "Pratiche agricole sostenibili"
     ],
-    "peppers_description": "Peperoni croccanti e colorati coltivati con cura nelle nostre fattorie marocchine. Disponibili in più varietà, i nostri peperoni sono noti per la loro freschezza, croccantezza e colori vivaci. Ideali per cucinare, grigliare o insalate fresche.",
+    "oranges_climate": "L'umidità oceanica bilanciata e l'intensa esposizione al sole aumentano naturalmente i livelli di zucchero (Brix).",
+    "peppers_description": "Peperoni croccanti e colorati coltivati con cura nelle fattorie costiere di Agadir sotto una media stabile di 21°C.",
     "peppers_features": [
       "Più varietà di colori disponibili",
       "Consistenza croccante e sapore fresco",
@@ -93,19 +120,16 @@
       "Accuratamente selezionati e confezionati",
       "Durata di conservazione prolungata"
     ],
-    "watermelons_description": "Angurie succose e dolci coltivate sotto il sole marocchino. Le nostre angurie sono accuratamente selezionate per dolcezza, consistenza croccante e polpa rossa vibrante. Perfette per le calde giornate estive e uno spuntino sano e rinfrescante.",
-    "watermelons_features": [
-      "Naturalmente dolci e rinfrescanti",
-      "Alto contenuto d'acqua per l'idratazione",
-      "Varietà senza semi disponibili",
-      "Accuratamente raccolte e trasportate",
-      "Disponibilità in alta stagione"
-    ],
-    "specs_title": "Specifiche Tecniche",
-    "varieties_label": "Varietà",
-    "calendar_label": "Calendario Raccolto",
-    "packaging_label": "Imballaggio",
-    "calibration_label": "Calibro / Dimensioni",
+    "peppers_climate": "Il clima stabile previene le crepe della pelle e garantisce uno spessore uniforme delle pareti del frutto.",
+    "watermelons_description": "Angurie succose e dolci coltivate sotto l'eccezionale sole di Agadir.",
+    "watermelon_climate": "Il sole ininterrotto assicura una densità della polpa superiore e una dolcezza naturale.",
+    "zucchini_climate": "Il clima atlantico permette una crescita rapida e uniforme, con pelle liscia e cuore sodo.",
+    "melon_climate": "Le fresche notti oceaniche concentrano gli zuccheri nella polpa, garantendo un sapore intenso.",
+    "green_beans_climate": "L'aria atlantica a umidità controllata previene la formazione di fibre, mantenendo i fagiolini teneri e croccanti.",
+    "calabacin_description": "Le nostre zucchine sono coltivate nel microclima costiero di Agadir per garantire una forma perfetta e una pelle verde brillante.",
+    "melon_description": "Maturati sotto il sole di Agadir, i nostri meloni gialli offrono un sapore rinfrescante e dolce.",
+    "alubias_description": "Fagiolini piatti premium (Alubias), selezionati a mano per la qualità.",
+    "judias_description": "Fagiolini tondi fini (Judías), meticolosamente selezionati.",
     "tomatoes_specs": {
       "varieties": "Tondo, Ciliegino, Prugna (Roma), Cuore di Bue",
       "calendar": "Disponibilità tutto l'anno",
